--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.2.7
 autopep8==1.5.2
+dj-database-url==0.5.0
 Django==3.0.5
+django-heroku==0.3.1
 Pillow==7.1.2
+psycopg2==2.8.5
 pycodestyle==2.5.0
 pytz==2019.3
 sqlparse==0.3.1
+whitenoise==5.0.1
