--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.5.2
 dj-database-url==0.5.0
 Django==3.0.5
 django-heroku==0.3.1
+gunicorn==20.0.4
 Pillow==7.1.2
 psycopg2==2.8.5
 pycodestyle==2.5.0
